# Avalia-o-de-t-cnicas-de-otimiza-o-TInyML

./: GerarImagens.ipynb  README.md
Coletor/: README.md
Coletor/config/: config.py
Coletor/firmwares/sensor/: define-variable.h  defines.h  lib_config.ino  lib_eeprom.ino  lib_power.ino  lib_serial.ino  lib_util.ino  transceiver-software.ino
Coletor/interface/: .gitignore  coletor.py  converter.py  dash.py  inferencia.py  leituras_sensor_.csv  mae_leitura_sensores.csv  merged_dataset_BearingTest_3.csv  model_no_quant.tflite  saida.csv  test.h5
Coletor/interface/Mymodel/: keras_metadata.pb  saved_model.pb
Dados/: README.txt
Dados/case1/: X_test_features_10.csv  X_test_features_15.csv  X_test_features_20.csv  X_test_features_25.csv  X_test_features_5.csv  X_test_scaled10 - PICO.csv  X_test_scaled10.csv  X_test_scaled15 - PICO.csv  X_test_scaled15.csv  X_test_scaled20 - PICO.csv  X_test_scaled20.csv  X_test_scaled25 - PICO.csv  X_test_scaled25.csv  X_test_scaled5 - PICO.csv  X_test_scaled5.csv  X_train_features_10.csv  X_train_features_15.csv  X_train_features_20.csv  X_train_features_25.csv  X_train_features_5.csv  scored_1_10.csv  scored_1_15.csv  scored_1_20.csv  scored_1_25.csv  scored_1_5.csv  y_test_features_15.csv  y_train_features_25.csv
Dados/case1/Modelos/: 10model_clu.cc  10model_no_quant.cc  10model_pru.cc  10model_qat.cc  10model_qpa.cc  15model_clu.cc  15model_no_quant.cc  15model_pru.cc  15model_qat.cc  15model_qpa.cc  20model_clu.cc  20model_no_quant.cc  20model_pru.cc  20model_qat.cc  20model_qpa.cc  25model_clu25.cc  25model_no_quant25.cc  25model_pru25.cc  25model_qat25.cc  25model_qpa25.cc  5model_clu5.cc  5model_no_quant5.cc  5model_pru5.cc  5model_qat5.cc  5model_qpa5.cc
Dados/case2/: 25X_test_features_25.csv  25X_train_features_25.csv  dadosGrandes.tgn
Dados/case2/10/: 10X_test_features_10.csv  10X_train_features_10.csv  10_X_test_scaled10.csv  10_X_test_scaled10_PICO.csv  scored_1_10.csv
Dados/case2/15/: 15X_test_features_15.csv  15X_train_features_15.csv  15_X_test_scaled15.csv  15_X_test_scaled15_PICO.csv  scored_1_15.csv
Dados/case2/20/: 20_X_test_scaled20.csv  20_X_test_scaled20_PICO.csv  scored_1_20.csv
Dados/case2/5/: 5X_test_features_5.csv  5X_train_features_5.csv  5_X_test_scaled5.csv  5_X_test_scaled5_PICO.csv  (+1 more)
Gerar Modelos/: Case1Case2.ipynb  Case3.ipynb
SwEmbarcadoPico/: CMakeLists.txt  README.md
SwEmbarcadoPico/examples/case1/: CMakeLists.txt  LoRa-RP2040.cpp  LoRa-RP2040.h  README.md  constants.cpp  dataset.h  main_functions.cpp  main_functions.h  model.cpp  tempo.cpp  tempo.h  transmitter.cpp  transmitter.h
SwEmbarcadoPico/examples/wine/: CMakeLists.txt  constants.h  debug.cpp  debug.h  main_functions.cpp  model.cpp  output_handler.h  tempo.cpp  transmitter.cpp  transmitter.h  wine.h
(+28 files in other folders)
